# CPP_Template

./: .codecov.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  codecov.yml
doc/: CMakeLists.txt  documentation-config.doxygen.in  technical-overview.dox  user-guide.dox  welcome.dox
doc/html/: AbstractState_8cpp.html  AbstractState_8cpp__incl.map  AbstractState_8cpp__incl.md5  Machine_8cpp.html  Machine_8cpp__incl.map  Machine_8cpp__incl.md5  Machine_8h.html  Machine_8h__dep__incl.map  Machine_8h__dep__incl.md5  Machine_8h__incl.map  Machine_8h__incl.md5  Machine_8h_source.html  NormalState_8cpp.html  NormalState_8cpp__incl.map  NormalState_8cpp__incl.md5  Release_Notes.html  SoldOutState_8cpp.html  SoldOutState_8cpp__incl.map  SoldOutState_8cpp__incl.md5  States_8h.html  States_8h__dep__incl.map  States_8h__dep__incl.md5  States_8h__incl.map  States_8h__incl.md5  States_8h_source.html  Technical_Overview.html  User_Guide.html  annotated.html  annotated_dup.js  classAbstractState-members.html  classAbstractState.html  classAbstractState.js  classAbstractState__coll__graph.map  classAbstractState__coll__graph.md5  classAbstractState__inherit__graph.map  classAbstractState__inherit__graph.md5  classMachine-members.html  classMachine.html  classMachine.js  classMachine__coll__graph.map  (+68 more)
doc/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_1.js  pages_2.js  pages_3.js  related_0.js  searchdata.js  variables_0.js
include/: CMakeLists.txt  Machine.h  States.h
src/: CMakeLists.txt  Machine.cpp  main.cpp
src/States/: AbstractState.cpp  NormalState.cpp  SoldOutState.cpp  State.cpp
test/: CMakeLists.txt  testStateMachine.cpp
